kubernetes/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demok8s-app
  namespace: demok8s
  labels:
    app: demok8s-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: demok8s-app
  template:
    metadata:
      labels:
        app: demok8s-app
    spec:
      securityContext:
        fsGroup: 1000
      #  imagePullSecrets:
      #    - name: acr-auth
      containers:
        - image: brainsum/k8sdemo:1.2.0
          imagePullPolicy: "IfNotPresent"
          name: drupal
#          # @todo: In a rolling update this is going to break some containers (new db -> old code).
#          # @todo: Rollback is also not possible (db is gonna stay the same).
#          lifecycle:
#            postStart:
#              exec:
#                command:
#                  - "drush updb -y && drush cim -y && drush cim -y && drush cr && drush cron"
          ports:
            - name: fastcgi
              containerPort: 9000
              protocol: TCP
          volumeMounts:
            - name: drupal-data
              mountPath: /var/www/html/private_files
              subPath: private_files
            - name: drupal-data
              mountPath: /var/www/html/web/sites/default/files
              subPath: files

        - image: brainsum/k8sdemo-nginx:1.2.0
          imagePullPolicy: "IfNotPresent"
          name: nginx
          ports:
            - name: http
              containerPort: 80
          volumeMounts:
            - name: drupal-data
              mountPath: /var/www/html/private_files
              subPath: private_files
            - name: drupal-data
              mountPath: /var/www/html/web/sites/default/files
              subPath: files
      # @todo: Does this handle multiple containers writing at the same time?
      volumes:
        - name: drupal-data
          persistentVolumeClaim:
            claimName: demok8s-app-pvc
