kubernetes/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-service
  namespace: demok8s
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
  selector:
    app: demok8s-app
