kubernetes/ingress.yaml
# @todo: Test.
# @todo: Debug: https://kubernetes.io/docs/concepts/services-networking/ingress/
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: demok8s-ingress
  namespace: demok8s
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/affinity: "cookie"
    nginx.ingress.kubernetes.io/affinity-mode: "persistent"
    nginx.ingress.kubernetes.io/session-cookie-change-on-failure: 'true'
    #nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - http:
        paths:
          - path: /
            backend:
              serviceName: app-service
              servicePort: 80

# @todo: Replace with Azure Application Gateway
